Fixed build pipeline

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,38 +79,15 @@ jobs:
       uses: hashicorp/setup-terraform@v3
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-#
-#    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-#      working-directory: ${{ env.TF_WORKING_DIR }}
-      run: terraform init
 
-    - name: Terraform Format
-#      working-directory: ${{ env.TF_WORKING_DIR }}
-      run: terraform fmt -check
-
-    - name: Terraform Validate
-#      working-directory: ${{ env.TF_WORKING_DIR }}
-      run: terraform validate
-    # Checks that all Terraform configuration files adhere to a canonical format
-#    - name: Terraform Format
-#      run: terraform fmt -check
-
-#    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-#      working-directory: ${{ env.TF_WORKING_DIR }}
-      run: terraform plan #-var token=${{ secrets.TF_API_TOKEN }}
-
-      # On push to "main", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-#    - name: Terraform Apply
-#      working-directory: ${{ env.TF_WORKING_DIR }}
-#      #      if: github.ref == 'refs/heads/"main"' && github.event_name == 'merged'
-#      run: terraform apply -var token=${{ secrets.TF_API_TOKEN }} -auto-approve
+    - name: Create tfvars file
+      run: |
+        echo '${{ secrets.KUBE_CONFIG }}' >> ~/.kube/config
+        echo '${{ secrets.TF_TERRAFORM_VARS }}' >> terraform.tfvars
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 #      working-directory: ${{ env.TF_WORKING_DIR }}
       env:
         TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-      run: terraform apply -auto-approve
+      run: make dev
