--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,6 +46,7 @@ jobs:
     - name: Create tfvars file
       run: |
         mkdir ~/.kube
+        mkdir environment/dev
         echo '${{ secrets.KUBE_CONFIG }}' >> ~/.kube/config
         echo '${{ secrets.TF_TERRAFORM_VARS }}' >> environment/dev/terraform.tfvars
 
